TS-2776: Core dump inside openssl library

(cherry picked from commit 9c6bb37b39504056683835038aa17fcaedb3c31d)

Conflicts:
	CHANGES